# InkyCloud-F1

./: .coolifyignore  .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COOLIFY.md  DEPLOYMENT.md  Dockerfile  EXAMPLES.md  LICENSE  MANIFEST.in  PUBLIC_REPO_CHECKLIST.md  README.md  SECURITY.md  SELF-HOSTING.md  docker-compose.yml  pyproject.toml  quickstart.sh  setup.py
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  update-f1-data.yml
app/: __init__.py  config.py  main.py  models.py
app/assets/: circuits_data.json
app/assets/css/: styles.css
app/assets/favicon/: site.webmanifest
app/assets/js/: common.js
app/assets/seasons/: 2025.json  2026.json
app/services/: analytics.py  backup.py  database.py  f1_service.py  i18n.py  renderer.py  scheduler.py
app/templates/: api_docs.html  base.html  index.html  privacy.html  stats.html
app/templates/components/: credits_dropdown.html  header.html
scripts/: backup_cli.py  download_flags.py  generate_og_image.py  preprocess_flags.py  preprocess_tracks.py  reset_db.sh  update_historical.py  update_seasons.py
tests/: conftest.py  test_analytics.py  test_backup.py  test_config.py  test_main.py  test_renderer.py
translations/: cs.json  en.json
